Shading to Hero; Fixed img Item Showcase; Revised text-spacing prototype

--- a/asset/scss/_settings.scss
+++ b/asset/scss/_settings.scss
@@ -448,7 +448,7 @@ $prototype-display: ( inline, inline-block, block, table, table-cell);
 // 34. Prototype Font-Styling
 // --------------------------
 $prototype-font-breakpoints: $global-prototype-breakpoints;
-$prototype-wide-letter-spacing: rem-calc(2);
+$prototype-wide-letter-spacing: rem-calc(1);
 $prototype-font-normal: $global-weight-normal;
 $prototype-font-bold: $global-weight-bold;
 // 35. Prototype List-Style-Type
